// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ lgHXgS"
  size={null}
>
  <p>
    Body
  </p>
</div>
`;

exports[`Box Snapshots Size 1`] = `
<div
  className="sc-bdfBwQ jShQhS"
  size="huge"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Box Snapshots invalid Size 1`] = `
<div
  className="sc-bdfBwQ kYXVhO"
  size={100}
>
  <p>
    Body
  </p>
</div>
`;
